// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar can be used when:  [FRAGILE] assigns classes 1`] = `
<DocumentFragment>
  <header
    class="nav-bar my-class"
  >
    <div>
      Content
    </div>
  </header>
</DocumentFragment>
`;

exports[`Navbar can be used when:  [FRAGILE] can be sticky 1`] = `
<DocumentFragment>
  <header
    class="nav-bar"
  >
    Content
  </header>
</DocumentFragment>
`;
